Implemented ability for user to change complexity.
Settings communicates with StartingActivity, allowing a user to choose their prefered game complexity.

Notes:
- default complexity is 4
- SettingsActivity hard codes methods that send StartingActivity the desired complexity (code smell)
- 5x5 does not work since png resources for tiles 16-25 have not yet been created
- StartingActivity is getting smelly as well

--- a/Phase1/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase1/GameCentre/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".GameActivity" />
+        <activity android:name=".SettingsActivity"
+            android:parentActivityName=".StartingActivity"
+            android:theme="@style/Theme.AppCompat.Light">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".StartingActivity" />
+        </activity>
         <activity android:name=".ScoreBoardActivity"
                   android:parentActivityName=".StartingActivity"
                   android:theme="@style/Theme.AppCompat.Light">
