--- a/Phase1/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase1/GameCentre/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fall2018.csc2017.slidingtiles">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,28 +14,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".StartingActivity">
+        <activity android:name=".StartingActivity"></activity>
+        <activity android:name=".GameActivity" />
+        <activity
+            android:name=".SettingsActivity"
+            android:parentActivityName=".StartingActivity"
+            android:theme="@style/Theme.AppCompat.Light">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".StartingActivity" />
+        </activity>
+        <activity
+            android:name=".ScoreBoardActivity"
+            android:parentActivityName=".StartingActivity"
+            android:theme="@style/Theme.AppCompat.Light">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".StartingActivity" />
+        </activity>
+        <activity android:name=".AccountActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity" />
-        <activity android:name=".SettingsActivity"
-            android:parentActivityName=".StartingActivity"
-            android:theme="@style/Theme.AppCompat.Light">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".StartingActivity" />
-        </activity>
-        <activity android:name=".ScoreBoardActivity"
-                  android:parentActivityName=".StartingActivity"
-                  android:theme="@style/Theme.AppCompat.Light">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".StartingActivity" />
-        </activity>
+        <activity android:name=".CreateAccountActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".ChooseGameActivity"></activity>
     </application>
 
 </manifest>
