--- a/Phase1/GameCentre/local.properties
+++ b/Phase1/GameCentre/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 11 15:25:54 EDT 2018
-sdk.dir=/h/u6/c7/05/grbickon/Android/Sdk
+#Sun Oct 28 16:52:15 EDT 2018
+sdk.dir=C\:\\Users\\Magomed\\AppData\\Local\\Android\\Sdk
