--- a/Phase1/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase1/GameCentre/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
             android:name=".ScoreBoardActivity"
             android:parentActivityName=".StartingActivity"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".StartingActivity" />
